# pocket-tts-mcp

./: .gitignore  README.md  pyproject.toml
src/pocket_tts_mcp/: __init__.py  engine.py  server.py
